# bitfield-struct-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md
.github/workflows/: rust-clippy.yml  rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
src/: attr.rs  bitenum.rs  lib.rs  traits.rs
tests/: test.rs
