[package]
name = "bitfield-struct"
version = "0.7.0"
edition = "2021"
authors = ["Lars Wrenger <lars@wrenger.net>"]
description = "Struct-like procedural macro for bitfields."
keywords = ["bitfields", "bits", "proc-macro"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/wrenger/bitfield-struct-rs.git"
documentation = "https://docs.rs/bitfield-struct"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

[dev-dependencies]
defmt = "0.3"
endian-num = { version = "0.1", features = ["linux-types"] }
